--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,9 +43,9 @@
 <!-- package="tv.flipr.cw" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="tv.flipr.thenewslens"
-      android:versionCode="119"
-      android:versionName="5.0.1.119">
+      package="tv.tv9x9.player"
+      android:versionCode="120"
+      android:versionName="5.0.1.120">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
