--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,8 +44,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
-      android:versionCode="120"
-      android:versionName="5.0.1.120">
+      android:versionCode="121"
+      android:versionName="5.0.1.121">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -57,7 +57,7 @@
     	If you don't do this, all the R.'s will be broken. To be fixed later by using library project.
    	-->
    	
-   	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
+   	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="17" />
    			
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -608,13 +608,23 @@
         
         <service android:name="tv.tv9x9.player.switchboard" />
         
-        <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
+        <!-- service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
 		<receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver" android:exported="true">
   			<intent-filter>
     			<action android:name="com.android.vending.INSTALL_REFERRER" />
   			</intent-filter>
+		</receiver-->
+
+		<activity android:name="com.google.android.gms.ads.AdActivity"
+             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
+  		
+		<!-- Used for Google Play Store Campaign Measurement-->;
+		<service android:name="com.google.analytics.tracking.android.CampaignTrackingService" />
+		<receiver android:name="com.google.analytics.tracking.android.CampaignTrackingReceiver" android:exported="true">
+			<intent-filter>
+				<action android:name="com.android.vending.INSTALL_REFERRER" />
+			</intent-filter>
 		</receiver>
-		
 		
 		<service android:name="tv.tv9x9.player.AppCastDeviceService" android:exported="false">
     		<intent-filter>
