--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,8 +45,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
-      android:versionCode="132"
-      android:versionName="5.0.1.132">
+      android:versionCode="133"
+      android:versionName="5.0.1.133">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -76,7 +76,7 @@
          
       
     <!--uses-feature android:name="com.google.android.tv" android:required="true" /-->
-    <application android:icon="@string/app_icon" android:label="@string/app_name" android:largeHeap="true" android:debuggable="false" android:hardwareAccelerated="true">
+    <application android:icon="@drawable/app_icon_ptr" android:label="@string/app_name" android:largeHeap="true" android:debuggable="@bool/debuggable" android:hardwareAccelerated="true">
         <!--meta-data android:name="com.facebook.sdk.ApplicationId" android:value="361253423962738"/-->    
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />            
