--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,9 +45,9 @@
 <!-- package="tv.flipr.musicsounds" -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="tv.flipr.yourapp3"
-      android:versionCode="134"
-      android:versionName="5.0.1.134">
+      package="tv.tv9x9.player"
+      android:versionCode="135"
+      android:versionName="5.0.1.135">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
