--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,8 +46,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
-      android:versionCode="135"
-      android:versionName="5.0.1.135">
+      android:versionCode="136"
+      android:versionName="5.0.1.136">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -67,7 +67,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />    
+    <uses-permission android:name="android.permission.WAKE_LOCK" />  
+    <uses-permission android:name="com.android.vending.BILLING" />  
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<uses-permission android:name="tv.tv9x9.player.permission.C2D_MESSAGE" />
 	
