--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,8 +46,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="tv.tv9x9.player"
-      android:versionCode="136"
-      android:versionName="5.0.1.136">
+      android:versionCode="137"
+      android:versionName="5.0.1.137">
           
     <!-- Instructions
     	The build for CTS version is very fragile:
@@ -75,10 +75,11 @@
 	          
     <!-- change to false to allow Google TV -->
     <uses-feature android:name="android.hardware.touchscreen" android:required="true" />
-         
-      
+           
+    <!-- android:debuggable="@bool/debuggable" -->
+    
     <!--uses-feature android:name="com.google.android.tv" android:required="true" /-->
-    <application android:icon="@drawable/app_icon_ptr" android:label="@string/app_name" android:largeHeap="true" android:debuggable="@bool/debuggable" android:hardwareAccelerated="true">
+    <application android:icon="@drawable/app_icon_ptr" android:label="@string/app_name" android:largeHeap="true" android:hardwareAccelerated="true">
         <!--meta-data android:name="com.facebook.sdk.ApplicationId" android:value="361253423962738"/-->    
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />            
